[tool.poetry]
name = "polyrename"
version = "1.1.0"
license = "GPL-3.0-only"
description = "A cross-platform, bulk-file rename tool"
readme = "README.md"
repository = "https://github.com/agsimmons/PolyRename"
documentation = "https://polyrename.readthedocs.io/"
authors = [
    "Andrew Simmons <agsimmons0@gmail.com>",
    "Ethan Smith <smithe4@wit.edu>",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/agsimmons/PolyRename/issues/"

[tool.poetry.scripts]
polyrename = "polyrename.__main__:main"

[tool.poetry.dependencies]
python = "^3.6.1,<3.10"
mediafile = ">=0.2.0,<1.0.0"
PySide2 = "^5.15.2"


[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"
pytest = "^6.2.2"
flake8 = "^3.8.4"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
